Add navigation bar

--- a/src/styles/Views.scss
+++ b/src/styles/Views.scss
@@ -6,7 +6,8 @@
     font-weight: 900;
     font-family: "Roboto Mono", monospace;
     color: rgb(248, 92, 1);
-    text-shadow: 2px 2px rgb(247, 185, 114);
+    text-shadow: 2px 2px rgb(7, 7, 7);
+    text-align: center;
   }
   &--header-title {
     font-size: 60px;
