--- a/src/styles/Views.scss
+++ b/src/styles/Views.scss
@@ -1,3 +1,16 @@
+.common {
+  &--padding-top {
+    padding-top: 20px;
+  }
+  &--image-enlarged {
+    transform: scale(1.2);
+    transition: transform 0.3s ease;
+  }
+  &--button-active {
+    font-weight: bolder;
+  }
+}
+
 .home {
   &--header-text {
     color: white;
@@ -33,4 +46,33 @@
     text-align: center;
     font-size: smaller;
   }
+}
+
+.trending {
+  &--card-list {
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    margin-right: 8px;
+    margin-bottom: 10px;
+  }
+  &--highlight {
+    border: 1px rgb(138, 138, 241) solid;
+    background-color: rgb(191, 232, 240);
+  }
+}
+
+.popular{
+  &--button {
+    color: antiquewhite;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ff9900;
+  border-radius: 50px;
 }
