--- a/src/styles/Component.scss
+++ b/src/styles/Component.scss
@@ -75,6 +75,7 @@
     display: flex;
     overflow-x: scroll;
     width: 100%;
+    text-align: center;
   }
   &--padding-top {
     padding-top: 20px;
