--- a/src/styles/Component.scss
+++ b/src/styles/Component.scss
@@ -2,6 +2,8 @@
   &--bar {
     background-color: rgb(248, 92, 1);
     padding: 10px;
+    position: relative;
+    z-index: 99;
   }
 
   &--list {
@@ -137,5 +139,10 @@
 
   100% {
     opacity: 1;
+  }
+}
+.button{
+  &--color{
+    color: #ff6600;
   }
 }
