--- a/src/styles/Component.scss
+++ b/src/styles/Component.scss
@@ -48,6 +48,21 @@
   }
 }
 
+.button-data {
+  &--card-list {
+    width: 200px;
+  }
+  &--card-grid {
+    width: 100%;
+  }
+  &--card-layout {
+    height: 100%;
+    font-size: 20px;
+    text-align: center;
+    padding-bottom: 30px;
+  }
+}
+
 .page-content {
   &--page-padding {
     padding: 20px;
@@ -81,6 +96,15 @@
   }
   &--padding-top {
     padding-top: 20px;
+  }
+}
+
+.button{
+  &--color {
+    color: #ff6600;
+  }
+  &--active {
+    font-weight: 900;
   }
 }
 
@@ -139,10 +163,5 @@
 
   100% {
     opacity: 1;
-  }
-}
-.button{
-  &--color{
-    color: #ff6600;
   }
 }
