--- a/src/styles/Component.scss
+++ b/src/styles/Component.scss
@@ -60,6 +60,34 @@
     font-weight: 900;
     color: rgb(0, 0, 0);
   }
+  &--title {
+    color: #e8e6e3;
+    text-transform: capitalize;
+    font-family: "Suwannaphum", serif;
+    font-size: 16px;
+    padding-top: 4px;
+  }
+}
+.menu {
+  &--title {
+    color: #e8e6e3;
+    text-transform: capitalize;
+    font-family: "Suwannaphum", serif;
+    font-size: 16px;
+  }
+  &--list a {
+    color: white;
+    text-decoration: none;
+  }
+
+  &--list a:hover {
+    text-decoration: underline;
+    font-weight: 900;
+  }
+  &--list a:active {
+    font-weight: 900;
+    color: rgb(0, 0, 0);
+  }
 }
 
 .button-data {
