--- a/src/styles/Component.scss
+++ b/src/styles/Component.scss
@@ -96,6 +96,7 @@
     font-size: 20px;
     text-align: center;
     padding-bottom: 30px;
+    flex: 0 1 calc(20% - 8px);
   }
   &--card-list {
     width: 200px;
