--- a/src/styles/Component.scss
+++ b/src/styles/Component.scss
@@ -48,7 +48,7 @@
   }
 
   &--list li a {
-    color: white;
+    color: rgb(248, 92, 1);
     text-decoration: none;
   }
 
@@ -76,7 +76,7 @@
     font-size: 16px;
   }
   &--list a {
-    color: white;
+    color: rgb(248, 92, 1);
     text-decoration: none;
   }
 
