--- a/src/styles/Component.scss
+++ b/src/styles/Component.scss
@@ -163,9 +163,43 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-right: 20px;
   }
   &--arrow {
-    color:rgb(248, 92, 1);
+    color: rgb(248, 92, 1);
+  }
+}
+
+.content-box {
+  &--content-border {
+    border: #ff6600 1px solid;
+    overflow-y: scroll;
+    height: 280px;
+    width: auto;
+  }
+  &--content-border::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  &--content-border::-webkit-scrollbar-thumb {
+    background-color: #ff9900;
+    border-radius: 50px;
+  }
+}
+.review {
+  &--padding-bottom {
+    padding-bottom: 10px;
+  }
+  &--user {
+    color: #ff6600;
+    font-weight: bold;
+    font-size: 20px;
+    font-style: italic;
+    flex: auto;
+  }
+  &--date {
+    font-style: italic;
+    font-size: 12px;
   }
 }
 
@@ -217,4 +251,13 @@
   100% {
     opacity: 1;
   }
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ff9900;
+  border-radius: 50px;
 }
